--- a/css/style.css
+++ b/css/style.css
@@ -186,36 +186,32 @@
     width: 98vw;
     margin: 20px auto;
     /* height: 650px; */
-    border: 1px solid green;
+    background-image: url(../images/13.jpg);
   }
   .footer-main{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    width: 90%;
     height: 90%;
-    width: 80vw;
     margin: 30px auto ;
   }
   .footer-left{
-    border: 1px solid green;
-    width: 50%;
+    width: 40%;
     height: 100%;
   }
   .footer-img-icon{
-   border: 1px solid red;
    width: 100%;
    height: 100%;
   }
   p, h1{
     margin-top: 10px;
   }
-  p{
-    width: 60%;
-  }
   .footer-right{
-    width: 40%;
+    width: 50%;
     height: 100%;
-    border: 1px solid rgb(0, 21, 128);
+    box-sizing: border-box;
+    margin-left: 40px;
   }
   .footer-img img{
     width: 60px;
@@ -224,14 +220,20 @@
   .div{
     font-size: 30px;
   }
+  .div div{
+    margin-top: 20px;
+    box-shadow: 4px 4px 2px solid #0000;
+  }
   .foot-btn{
     padding: 10px 15px;
     border-radius: 25px; 
     background-color: transparent;
   }
   .div-last{
-    border: 1px solid red;
+    background: url('../images/15.jpg');
+    color: white;
     padding: 15px;
-    width: 95vw;
+    width: 97%;
+    margin: 0 auto 10px;
     text-align: center;
   }
